--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
   --bradius-500: 0.7rem;
 }
 
+* {
+  outline: 2px solid lime;
+}
+
 *,
 *::before,
 *::after {
@@ -32,6 +36,7 @@ body {
 
   display: grid;
   place-content: center;
+  justify-items: center;
 }
 h1,
 .final-price {
